fixed header z-index

--- a/css/app.css
+++ b/css/app.css
@@ -689,8 +689,8 @@ video {
   left: 5px;
 }
 
-.top-\[80px\] {
-  top: 80px;
+.top-\[65px\] {
+  top: 65px;
 }
 
 .top-\[125px\] {
@@ -725,20 +725,12 @@ video {
   left: 50%;
 }
 
-.top-\[88px\] {
-  top: 88px;
-}
-
-.top-\[65px\] {
-  top: 65px;
-}
-
 .z-\[1\] {
   z-index: 1;
 }
 
-.z-\[9999999\] {
-  z-index: 9999999;
+.z-\[99\] {
+  z-index: 99;
 }
 
 .z-20 {
@@ -751,6 +743,14 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.z-\[10002\] {
+  z-index: 10002;
+}
+
+.z-\[10001\] {
+  z-index: 10001;
 }
 
 .m-8 {
@@ -909,6 +909,10 @@ video {
   margin-top: auto;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
 .mt-\[15px\] {
   margin-top: 15px;
 }
@@ -919,22 +923,6 @@ video {
 
 .\!mb-0 {
   margin-bottom: 0px !important;
-}
-
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mt-52 {
-  margin-top: 13rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
 }
 
 .block {
@@ -985,8 +973,8 @@ video {
   height: 4rem;
 }
 
-.h-14 {
-  height: 3.5rem;
+.h-10 {
+  height: 2.5rem;
 }
 
 .h-8 {
@@ -1011,10 +999,6 @@ video {
 
 .h-\[40px\] {
   height: 40px;
-}
-
-.h-10 {
-  height: 2.5rem;
 }
 
 .h-0 {
@@ -1093,8 +1077,8 @@ video {
   width: auto;
 }
 
-.w-14 {
-  width: 3.5rem;
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-8 {
@@ -1127,10 +1111,6 @@ video {
 
 .w-1\/2 {
   width: 50%;
-}
-
-.w-10 {
-  width: 2.5rem;
 }
 
 .\!w-full {
@@ -1225,14 +1205,6 @@ video {
 
 .max-w-\[400px\] {
   max-width: 400px;
-}
-
-.max-w-xs {
-  max-width: 20rem;
-}
-
-.max-w-lg {
-  max-width: 32rem;
 }
 
 .flex-1 {
@@ -2068,17 +2040,13 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-\[2rem\] {
   font-size: 2rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .text-\[40px\] {
@@ -2109,6 +2077,10 @@ video {
 
 .text-\[1\.75rem\] {
   font-size: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
 }
 
 .text-\[13px\] {
@@ -5156,12 +5128,16 @@ nav.footer-nav .lang li.wpml-ls-current-language:hover > a {
     display: none;
   }
 
+  .lg\:h-14 {
+    height: 3.5rem;
+  }
+
   .lg\:h-auto {
     height: auto;
   }
 
-  .lg\:h-14 {
-    height: 3.5rem;
+  .lg\:w-14 {
+    width: 3.5rem;
   }
 
   .lg\:w-\[24rem\] {
@@ -5182,10 +5158,6 @@ nav.footer-nav .lang li.wpml-ls-current-language:hover > a {
 
   .lg\:w-full {
     width: 100%;
-  }
-
-  .lg\:w-14 {
-    width: 3.5rem;
   }
 
   .lg\:min-w-\[200px\] {
@@ -5315,6 +5287,10 @@ nav.footer-nav .lang li.wpml-ls-current-language:hover > a {
     padding-top: 2rem;
   }
 
+  .lg\:text-xl {
+    font-size: 1.25rem;
+  }
+
   .lg\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -5323,10 +5299,6 @@ nav.footer-nav .lang li.wpml-ls-current-language:hover > a {
   .lg\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .lg\:text-xl {
-    font-size: 1.25rem;
   }
 
   .lg\:text-\[\#604E4F\] {
