--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -136,8 +136,8 @@
   left: 5px
 }
 
-.top-\[80px\] {
-  top: 80px
+.top-\[65px\] {
+  top: 65px
 }
 
 .top-\[125px\] {
@@ -172,20 +172,12 @@
   left: 50%
 }
 
-.top-\[88px\] {
-  top: 88px
-}
-
-.top-\[65px\] {
-  top: 65px
-}
-
 .z-\[1\] {
   z-index: 1
 }
 
-.z-\[9999999\] {
-  z-index: 9999999
+.z-\[99\] {
+  z-index: 99
 }
 
 .z-20 {
@@ -198,6 +190,14 @@
 
 .z-50 {
   z-index: 50
+}
+
+.z-\[10002\] {
+  z-index: 10002
+}
+
+.z-\[10001\] {
+  z-index: 10001
 }
 
 .m-8 {
@@ -356,6 +356,10 @@
   margin-top: auto
 }
 
+.mt-16 {
+  margin-top: 4rem
+}
+
 .mt-\[15px\] {
   margin-top: 15px
 }
@@ -366,22 +370,6 @@
 
 .\!mb-0 {
   margin-bottom: 0px !important
-}
-
-.mt-32 {
-  margin-top: 8rem
-}
-
-.mt-52 {
-  margin-top: 13rem
-}
-
-.mt-24 {
-  margin-top: 6rem
-}
-
-.mt-16 {
-  margin-top: 4rem
 }
 
 .block {
@@ -432,8 +420,8 @@
   height: 4rem
 }
 
-.h-14 {
-  height: 3.5rem
+.h-10 {
+  height: 2.5rem
 }
 
 .h-8 {
@@ -458,10 +446,6 @@
 
 .h-\[40px\] {
   height: 40px
-}
-
-.h-10 {
-  height: 2.5rem
 }
 
 .h-0 {
@@ -540,8 +524,8 @@
   width: auto
 }
 
-.w-14 {
-  width: 3.5rem
+.w-10 {
+  width: 2.5rem
 }
 
 .w-8 {
@@ -574,10 +558,6 @@
 
 .w-1\/2 {
   width: 50%
-}
-
-.w-10 {
-  width: 2.5rem
 }
 
 .\!w-full {
@@ -672,14 +652,6 @@
 
 .max-w-\[400px\] {
   max-width: 400px
-}
-
-.max-w-xs {
-  max-width: 20rem
-}
-
-.max-w-lg {
-  max-width: 32rem
 }
 
 .flex-1 {
@@ -1515,17 +1487,13 @@
   line-height: 1.75rem
 }
 
-.text-xl {
-  font-size: 1.25rem
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem
 }
 
 .text-\[2rem\] {
   font-size: 2rem
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem
 }
 
 .text-\[40px\] {
@@ -1556,6 +1524,10 @@
 
 .text-\[1\.75rem\] {
   font-size: 1.75rem
+}
+
+.text-xl {
+  font-size: 1.25rem
 }
 
 .text-\[13px\] {
@@ -2684,12 +2656,16 @@ body {
     display: none
   }
 
+  .lg\:h-14 {
+    height: 3.5rem
+  }
+
   .lg\:h-auto {
     height: auto
   }
 
-  .lg\:h-14 {
-    height: 3.5rem
+  .lg\:w-14 {
+    width: 3.5rem
   }
 
   .lg\:w-\[24rem\] {
@@ -2710,10 +2686,6 @@ body {
 
   .lg\:w-full {
     width: 100%
-  }
-
-  .lg\:w-14 {
-    width: 3.5rem
   }
 
   .lg\:min-w-\[200px\] {
@@ -2843,6 +2815,10 @@ body {
     padding-top: 2rem
   }
 
+  .lg\:text-xl {
+    font-size: 1.25rem
+  }
+
   .lg\:text-base {
     font-size: 1rem;
     line-height: 1.5rem
@@ -2851,10 +2827,6 @@ body {
   .lg\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem
-  }
-
-  .lg\:text-xl {
-    font-size: 1.25rem
   }
 
   .lg\:text-\[\#604E4F\] {
